--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         crossorigin
         src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
       ></script> -->
-      <script type="module" src="./App.js"></script>
+      <script type="module" src="./src/App.js"></script>
     </div>
   </body>
 </html>
